# agentic-python-repo-rag-copilot

./: .dockerignore  .env.docker.example  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  project_tree.txt  pyproject.toml  requirements.txt
.streamlit/: config.toml
api/: main.py  routes_chat.py  routes_health.py  routes_indexing.py  routes_upload.py  schemas.py
api/routes/: chat.py  repositories.py  temporary_repos.py
app/: streamlit_app.py
app/pages/: 1_Index_Repository.py  2_Upload_Files.py  3_Chat.py  4_Evaluation.py
backend/: .env.example  docker-compose.yml  requirements.txt
data/: eval_cases.json
docker/: Dockerfile  docker-compose.yml
frontend/: index.html  script.js  styles.css  vercel.json
scripts/: cleanup_temporary_repos.py  index_company_repo.py  index_repo.py  index_uploaded_file.py  init_db.py  inspect_metadata_records.py  inspect_qdrant_records.py  inspect_supabase_vector_records.py  rebuild_index.py  run_eval.py  seed_sample_repo.py  test_github_ingestion.py  test_llm_router.py  test_load_code_graph_from_db.py  test_load_existing_repo.py  test_qdrant_vector_store.py  test_storage_connections.py
src/: __init__.py  agent.py  ast_parser.py  chunker.py  code_graph.py  company_repos.py  config.py  constants.py  doc_chunker.py  embeddings.py  evaluator.py  indexer.py  llm.py  prompts.py  qdrant_vector_store.py  query_router.py  reranker.py  retriever.py  scanner.py  schemas.py  settings.py  tools.py  vector_store.py
tests/: test_agent_graph.py  test_code_graph.py  test_query_router.py
(+198 files in other folders)
