[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-codebase-rag"
version = "1.0.0"
description = "Agentic RAG assistant for Python codebases"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.ruff]
line-length = 100
target-version = "py311"
